<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">psyBNC</string>
    <string name="status_label">Stato server</string>
    <string name="status_running">In esecuzione</string>
    <string name="status_stopped">Fermo</string>
    <string name="status_error">Errore</string>
    <string name="port_label">Porta listener</string>
    <string name="download_label">Cartella download</string>
    <string name="download_notifications_label">Notifica quando un download finisce</string>
    <string name="select_folder">Seleziona cartella</string>
    <string name="start_server">Avvia server</string>
    <string name="stop_server">Stop server</string>
    <string name="reset_config">Reset Config</string>
    <string name="reset_config_confirm_title">Conferma reset</string>
    <string name="reset_config_confirm_message">Vuoi davvero resettare la configurazione ai valori di fabbrica? Questa operazione eliminerà le tue impostazioni e fermerà il server se in esecuzione.</string>
    <string name="reset">Reset</string>
    <string name="about_button">Info &amp; Licenza</string>
    <string name="about_title">Informazioni su psyBNC Android</string>
    <string name="about_message">Porting Android realizzato da:\n8byte di Stefano Basile\nEmail: info@8byte.it\nWeb: https://8byte.it\n\n-- La Nostra Storia --\nTutto è iniziato con una passione nei primi anni 2000. Nel cuore del Salento, a San Pancrazio Salentino, Stefano Basile ha dato vita a 8byte con la missione di creare soluzioni software che siano veri e propri partner per la crescita aziendale, unendo innovazione e dedizione.\n\n-- Licenza (GPLv2) --\nQuesta applicazione integra e modifica il codice originale di psyBNC. In ottemperanza alla licenza originale, questa app è rilasciata e distribuita sotto licenza GNU General Public License v2 (GPLv2).</string>
    <string name="ip_label">IP disponibili</string>
    <string name="bind_label">IP di bind selezionato</string>
    <string name="log_label">Ultimo log</string>
    <string name="folder_unsupported">Cartella non supportata da Android per il binario nativo</string>
    <string name="port_invalid">Porta non valida</string>
    <string name="service_notification_title">psyBNC attivo</string>
    <string name="service_notification_text">Il server psyBNC è in foreground</string>
    <string name="default_log">Nessun log disponibile</string>
    <string name="storage_permission_title">Accesso memoria</string>
    <string name="storage_permission_message">Per usare root memoria interna o microSD il server nativo ha bisogno dell’accesso completo ai file.</string>
    <string name="open_settings">Apri impostazioni</string>
    <string name="continue_picker">Continua</string>
    <string name="folder_picker_failed">Non riesco ad aprire il selettore cartella</string>
    <string name="folder_selected">Cartella selezionata</string>
    <string name="folder_unavailable">Cartella non accessibile come percorso filesystem</string>
    <string name="grant_storage_first">Concedi prima l’accesso memoria completa</string>
    <string name="system_folder_picker">Apri picker memoria interna o microSD</string>
    <string name="choose_bind_ip">Scegli IP di bind</string>
    <string name="start_after_bind">Avvia</string>
    <string name="bind_all_ipv4">Tutti gli IPv4 (consigliato)</string>
    <string name="bind_all_ipv6">Tutti gli IPv6 (::)</string>
    <string name="bind_all_auto">Automatico (*)</string>
    <string name="bind_interface_format">%1$s (%2$s)</string>
    <string name="bind_summary_format">%1$s → %2$s</string>
    <string name="bind_ipv4_format">IPv4 %1$s:%2$d</string>
    <string name="bind_ipv6_format">IPv6 [%1$s]:%2$d</string>
    <string name="download_notification_channel">Download psyBNC</string>
    <string name="download_notification_title">Download completato</string>
    <string name="download_notification_text">%1$s scaricato in %2$s</string>
</resources>
